# parc

./: README.md  dune-project  parc.opam
examples/: dune  wyas.ml  wyas1.ml  wyas2.ml  wyas3.ml  wyas4.ml  wyas5.ml
lib/: dune  parc.ml
test/: dune
